<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background= "@drawable/background"
    tools:context=".Tela2Activity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/welcomeMSG"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvUsuarioNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#28756E"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="118dp"
        android:layout_height="45dp"
        android:layout_marginTop="64dp"
        android:text="@string/textoExemplo"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUsuarioNome" />

    <Button
        android:id="@+id/btStore"
        android:layout_width="197dp"
        android:layout_height="50dp"
        android:layout_marginStart="155dp"
        android:layout_marginTop="91dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="289dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/store"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/btRegister"
        android:layout_width="197dp"
        android:layout_height="50dp"
        android:layout_marginStart="156dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="161dp"
        android:layout_marginBottom="197dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btStore" />

    <TextView
        android:id="@+id/pontosUsuario"
        android:layout_width="168dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="222dp"
        android:layout_marginEnd="97dp"
        android:layout_marginBottom="112dp"
        android:text="@string/user_points"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#28756E"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/btStore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>