<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background= "@drawable/background"
    tools:context=".CadastroItemActivity">


    <Button
        android:id="@+id/btRegisterItem"
        android:layout_width="217dp"
        android:layout_height="55dp"
        android:layout_marginStart="97dp"
        android:layout_marginTop="99dp"
        android:layout_marginEnd="97dp"
        android:layout_marginBottom="223dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/item_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edRegisterPreco" />

    <EditText
        android:id="@+id/edRegisterPreco"
        android:layout_width="374dp"
        android:layout_height="72dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="70dp"
        android:ems="10"
        android:hint="@string/item_price"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/btRegisterItem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edItemRegister" />

    <EditText
        android:id="@+id/edItemRegister"
        android:layout_width="371dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="40dp"
        android:ems="10"
        android:hint="@string/item_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/edRegisterPreco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRegisterItem" />

    <TextView
        android:id="@+id/tvRegisterItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="20dp"
        android:text="@string/title_register_item"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/edItemRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>